--- a/API_Backend/views/register.ejs
+++ b/API_Backend/views/register.ejs
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
 </head>
+
 <body>
-    <h1>Login</h1>
-    <form action="/login" method="POST">
+    <h1>Register</h1>
+    <form action="/register" method="POST">
         <input type='text' placeholder='Username' name="username" />
-        <br/>
+        <br />
         <input type='password' placeholder='Password' name="password" />
-        <br/>
+        <br />
         <button>Login</button>
     </form>
 </body>
+
 </html>
