--- a/API_Backend/views/Login.ejs
+++ b/API_Backend/views/Login.ejs
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Login</h1>
-    <form action="/login" method="POST">
+    <form action="/auth/login" method="POST">
         <input type='text' placeholder='Username' name="username" />
         <br/>
         <input type='password' placeholder='Password' name="password" />
