--- a/API_Backend/views/register.ejs
+++ b/API_Backend/views/register.ejs
@@ -10,12 +10,12 @@
 
 <body>
     <h1>Register</h1>
-    <form action="/register" method="POST">
+    <form action="/auth/register" method="POST">
         <input type='text' placeholder='Username' name="username" />
         <br />
         <input type='password' placeholder='Password' name="password" />
         <br />
-        <button>Login</button>
+        <button>Register</button>
     </form>
 </body>
 
