--- a/React_Frontend/src/Styles/NavBar.css
+++ b/React_Frontend/src/Styles/NavBar.css
@@ -2,6 +2,17 @@
       display: none;
     }
 
-.nav-item.dropdown:hover .dropdown-menu {
-    display: block;
+.dropdown{
+    font-size: large;
+    margin-left: 30px;
 }
+
+.navbar-brand{
+    font-size: xx-large;
+}
+
+#logo{
+    margin-right: 10px;
+}
+
+
