--- a/React_Frontend/src/Styles/Slideshow.css
+++ b/React_Frontend/src/Styles/Slideshow.css
@@ -1,3 +1,15 @@
 img{
     max-height: 600px;
 }
+.pickgradient {
+  display:inline-block;
+  background: linear-gradient(to bottom, rgba(33, 37, 41, 0.6) 0%,rgba(33, 37, 41, 0.4) 20%,rgba(1,1,1,0) 100%); /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a6000000', endColorstr='#00000000',GradientType=0 ); /* IE6-9 */
+  width: 100%;
+}
+
+img{
+  position:relative;
+  z-index:-1;
+  display:block;
+}
