--- a/React_Frontend/src/Styles/NavBar.css
+++ b/React_Frontend/src/Styles/NavBar.css
@@ -4,7 +4,10 @@
 
 .dropdown, .nav-link{
     font-size: large;
-    margin-left: 30px;
+    /* margin-left: 30px; */
+}
+.dropdown-menu{
+    /* margin-left:30px; */
 }
 
 .navbar-brand{
