--- a/React_Frontend/src/Styles/Slideshow.css
+++ b/React_Frontend/src/Styles/Slideshow.css
@@ -1,5 +1,5 @@
 img{
-    max-height: 600px;
+  max-height: 600px;
 }
 .pickgradient {
   display:inline-block;
@@ -13,5 +13,27 @@ img{
   z-index:-1;
   display:block;
  
+}
+
+
+.form-holder  {
+  position: relative;
+  text-align: center;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-justify-content: center;
+  justify-content: center;
+  -webkit-align-items: center;
+  align-items: center;
+  padding: 60px;
+}
+
+.title{
+  margin-bottom: 100px;
+  font-size: 55px;
+
 }
 
