--- a/React_Frontend/src/index.css
+++ b/React_Frontend/src/index.css
@@ -20,3 +20,15 @@ code {
 .btn-primary{
   background-color: rgb(65, 107, 246);
 }
+
+.btn-home{
+  background-color: #012c8a;
+  border-color: #012c8a;
+
+}
+
+.btn-home:hover{
+  background-color: rgb(0, 60, 189);
+  border-color: rgb(0, 60, 189);
+
+}
