--- a/React_Frontend/src/Styles/NewBooking.css
+++ b/React_Frontend/src/Styles/NewBooking.css
@@ -77,10 +77,37 @@
   text-decoration: none;
   /* margin-top: -2vw; */
   /* margin-bottom: 4vw !important; */
-  margin-left: 14.6vw;
+  margin-left: 7.5vw;
 }
 
 .proceedbtn:hover {
+  background: #016db4;
+  background-image: -webkit-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: -moz-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: -ms-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: -o-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
+  text-decoration: none;
+}
+.emailbtn {
+  width: 11vw;
+  height: 3vw;
+  background: #002677;
+  -webkit-border-radius: 9;
+  -moz-border-radius: 9;
+  border-radius: 9px;
+  font-family: Arial;
+  color: #ffffff;
+  font-size: 1vw;
+  /* padding: 10px 20px 10px 20px; */
+  /* border: solid #0d0c0d 1px; */
+  text-decoration: none;
+  /* margin-top: -2vw; */
+  /* margin-bottom: 4vw !important; */
+  margin-left: 3.6vw;
+}
+
+.emailbtn:hover {
   background: #016db4;
   background-image: -webkit-linear-gradient(top, #3cb0fd, #3498db);
   background-image: -moz-linear-gradient(top, #3cb0fd, #3498db);
@@ -103,7 +130,7 @@
   /* border: solid #0d0c0d 1px; */
   text-decoration: none;
   /* margin-top: -2vw; */
-  /* margin-bottom: 4vw !important; */
+  margin-bottom: 4vw !important;
   margin-left: 3.8vw;
 }
 
